--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,3 +23,6 @@ parameters:
     node_path: /usr/local/bin/node
     node_modules_path: /usr/local/lib/node_modules
     uglify_path: /usr/local/bin
+
+    client_id: 922040783377-rlqabnf9pohfsjea6520elfhtmbdtbj1.apps.googleusercontent.com
+    client_secret: paNRfDe98BeE3hzRtJk0F0IB
