--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "punkave/symfony2-file-uploader-bundle": "dev-master",
         "jms/i18n-routing-bundle": "^1.1",
         "leafo/lessphp": "^0.5.0",
-        "friendsofsymfony/jsrouting-bundle": "^1.5"
+        "friendsofsymfony/jsrouting-bundle": "^1.5",
+        "google/apiclient": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
